--- a/curso/home.html
+++ b/curso/home.html
@@ -1,1 +1,16 @@
-<!DOCTYPE html><html lang="pt-BR"><head><meta charset="UTF-8"><title>Página Inicial</title></head><body><h1>Bem-vindo ao Curso</h1><p>Página inicial.</p><a href="sumario.html">Ir para o Sumário</a></body></html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <title>Página Inicial</title>
+</head>
+<body>
+
+    <h1>Bem-vindo ao Curso</h1>
+
+    <p>Esta é a página inicial do curso.</p>
+
+    <a href="sumario.html">Ir para o Sumário</a>
+
+</body>
+</html>
