--- a/curso/capitulo1/exercicios/ex1.html
+++ b/curso/capitulo1/exercicios/ex1.html
@@ -1,1 +1,66 @@
-<html><body><h1>Ex1</h1></body></html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <title>Exercício 1 - Tabelas</title>
+</head>
+
+<body>
+
+    <h1>Tabelas</h1>
+
+    <h2>Célula com 2 colunas:</h2>
+    <table border="1" cellpadding="5">
+        <tr>
+            <th>Nome</th>
+            <th>Telefone</th>
+        </tr>
+        <tr>
+            <td>José das Couves</td>
+            <td>(22) 2728-6677 / (22) 2728-7766</td>
+        </tr>
+    </table>
+
+    <br><br>
+
+    <h2>Célula com 2 linhas:</h2>
+    <table border="1" cellpadding="5">
+        <tr>
+            <th>Nome</th>
+            <td>José das Couves</td>
+        </tr>
+        <tr>
+            <th>Telefone</th>
+            <td>(22) 2728-6677 / (22) 2728-7766</td>
+        </tr>
+    </table>
+
+    <br><br>
+
+    <h2>Tabela com Legenda</h2>
+    <figure>
+        <figcaption><strong>Total de despesas por mês</strong></figcaption>
+        <table border="1" cellpadding="5">
+            <tr>
+                <th>Mês</th>
+                <th>Total</th>
+            </tr>
+            <tr>
+                <td>Janeiro</td>
+                <td>R$ 1.500,00</td>
+            </tr>
+            <tr>
+                <td>Fevereiro</td>
+                <td>R$ 1.470,00</td>
+            </tr>
+        </table>
+    </figure>
+
+    <br><hr>
+
+    <p>
+        <a href="../../sumario.html">⬅️ Voltar ao Sumário</a>
+    </p>
+
+</body>
+</html>
