--- a/curso/capitulo2/introducao.html
+++ b/curso/capitulo2/introducao.html
@@ -1,1 +1,16 @@
-<html><body><h1>Cap 2 Introdução</h1></body></html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <title>Capítulo 2 - Introdução</title>
+</head>
+<body>
+
+    <h1>Capítulo 2 - Introdução</h1>
+
+    <p>Conteúdo da introdução do capítulo 2.</p>
+
+    <a href="../sumario.html">Voltar ao Sumário</a>
+
+</body>
+</html>
