--- a/curso/capitulo1/fundamentos.html
+++ b/curso/capitulo1/fundamentos.html
@@ -1,1 +1,16 @@
-<html><body><h1>Cap 1 Fundamentos</h1></body></html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <title>Capítulo 1 - Fundamentos</title>
+</head>
+<body>
+
+    <h1>Capítulo 1 - Fundamentos</h1>
+
+    <p>Conteúdo sobre os fundamentos do capítulo 1.</p>
+
+    <a href="../..//sumario.html">Voltar ao Sumário</a>
+
+</body>
+</html>
