--- a/curso/capitulo1/exercicios/ex2.html
+++ b/curso/capitulo1/exercicios/ex2.html
@@ -1,1 +1,16 @@
-<html><body><h1>Ex2</h1></body></html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <title>Exercício 2</title>
+</head>
+<body>
+
+    <h1>Exercício 2</h1>
+
+    <p>Descrição do exercício 2.</p>
+
+    <a href="../../sumario.html">Voltar ao Sumário</a>
+
+</body>
+</html>
