--- a/curso/index.html
+++ b/curso/index.html
@@ -1,40 +1,48 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Sumário</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Sumário - Exercícios de Programação Web</title>
+    <link rel="stylesheet" href="style.css"> <!-- Link para o seu arquivo CSS, se houver -->
 </head>
 <body>
+    <header>
+        <h1>Bem-vindo ao meu curso de Programação Web!</h1>
+        <nav>
+            <ul>
+                <li><a href="home.html">Página Inicial</a></li>
+                <li><a href="sumario.html">Sumário</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <h1>Sumário</h1>
-
-    <ol>
-        <!-- Capítulo 1 -->
-        <li><strong>Capítulo 1</strong>
+    <main>
+        <section id="sumario">
+            <h2>Estrutura do Sumário</h2>
             <ol>
-                <li><a href="capitulo1/introducao.html">Introdução</a></li>
-                <li><a href="capitulo1/fundamentos.html">Fundamentos</a></li>
+                <li>
+                    <strong>Capítulo 1</strong>
+                    <ul>
+                        <li><a href="capitulo1/introducao.html">Introdução</a></li>
+                        <li><a href="capitulo1/fundamentos.html">Fundamentos</a></li>
+                        <li><a href="capitulo1/exercicios/ex1.html">Exercício 1</a></li>
+                        <li><a href="capitulo1/exercicios/ex2.html">Exercício 2</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Capítulo 2</strong>
+                    <ul>
+                        <li><a href="capitulo2/introducao.html">Introdução</a></li>
+                    </ul>
+                </li>
             </ol>
+        </section>
+    </main>
 
-            <h3>Exercícios</h3>
-            <ol type="I">
-                <li><a href="capitulo1/exercicios/ex1.html">Exercício 1</a></li>
-                <li><a href="capitulo1/exercicios/ex2.html">Exercício 2</a></li>
-            </ol>
-        </li>
-
-        <br>
-
-        <!-- Capítulo 2 -->
-        <li><strong>Capítulo 2</strong>
-            <ol>
-                <li><a href="capitulo2/introducao.html">Introdução</a></li>
-            </ol>
-        </li>
-    </ol>
-
-    <br>
-    <a href="home.html">Retornar à página inicial</a>
-
+    <footer>
+        <p>&copy; 2025 - Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
