--- a/capitulo1/introducao.html
+++ b/capitulo1/introducao.html
@@ -20,23 +20,26 @@
     <!-- Seção 1 -->
     <h2 id="inicio">Início</h2>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet tortor blandit est egestas maximus 
-        quam eget, convallis dolor eget habitant tristique...
-        <!-- (seu texto continua) -->
+        
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eu velit lacinia, vehicula enim id, tempor nisi. Nunc consectetur rutrum posuere. Ut non congue tellus, at vulputate elit. Quisque sapien massa, luctus a finibus vel, pellentesque id lacus. Praesent vestibulum tortor vestibulum, tincidunt felis consequat, scelerisque nibh. Fusce laoreet erat nec massa sagittis mollis. Proin eget pharetra mi, ac feugiat ipsum. Mauris euismod mi non nisl maximus sollicitudin.
+
+Nam vel blandit ligula. Vivamus eget ullamcorper velit. Vivamus ut leo a ipsum viverra placerat. Ut sollicitudin tempor arcu sit amet posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam feugiat justo a feugiat elementum. Ut auctor eget est a faucibus. Aliquam ut metus molestie, finibus mi quis, porttitor justo.
     </p>
 
     <!-- Seção 2 -->
     <h2 id="meio">Meio</h2>
     <p>
-        Duis porta orci non nibh auctor, quis porttitor odio imperdiet. Sed posuere massa id hendrerit...
-        <!-- (seu texto continua) -->
+       Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Duis sagittis congue imperdiet. Suspendisse hendrerit consectetur ullamcorper. Nam volutpat leo vitae diam lobortis, quis tincidunt tellus auctor. Integer tempor laoreet bibendum. Suspendisse non diam cursus, fermentum tellus a, pharetra est. Proin eu mi ac elit malesuada eleifend.
+
+Integer porta purus sem, vel tincidunt orci hendrerit at. Pellentesque aliquam nunc a elit tristique, non feugiat nisi finibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas convallis turpis non convallis elementum. Cras eleifend est et sollicitudin interdum. Pellentesque faucibus arcu ac justo pellentesque imperdiet. Praesent condimentum maximus feugiat. Pellentesque et condimentum turpis.
     </p>
 
     <!-- Seção 3 -->
     <h2 id="fim">Fim</h2>
     <p>
-        Sed luctus, ante eu suscipit facilisis, tortor libero sodales dui, at efficitur elit lorem ac sapien...
-        <!-- (seu texto continua) -->
+        Integer porta purus sem, vel tincidunt orci hendrerit at. Pellentesque aliquam nunc a elit tristique, non feugiat nisi finibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas convallis turpis non convallis elementum. Cras eleifend est et sollicitudin interdum. Pellentesque faucibus arcu ac justo pellentesque imperdiet. Praesent condimentum maximus feugiat. Pellentesque et condimentum turpis.
+
+Fusce eu semper velit. Nullam placerat tincidunt risus, fermentum vestibulum dolor commodo vitae. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent vitae iaculis odio. Donec aliquam, dui sed sodales bibendum, neque nulla iaculis nulla, eget placerat dui tortor ut neque. Pellentesque sit amet risus elit. Integer lobortis eros feugiat, tempor odio quis, tincidunt tortor. Quisque sit amet blandit erat. Phasellus ut lectus eros. Ut in magna ac tellus porttitor vehicula. Morbi non nulla venenatis, dignissim risus nec, facilisis leo. Nunc pretium, mi nec consectetur aliquet, ex sem eleifend lacus, id ultrices nisl elit at elit
     </p>
 
     <hr>
