--- a/capitulo1/fundamentos.html
+++ b/capitulo1/fundamentos.html
@@ -8,12 +8,12 @@
 
     <h1>Capítulo 1 - Fundamentos</h1>
 
-    <p> <strong>Satélites da Nasa exibem redução da camada de gelo no Ártico<strong>
-WASHINGTON.- As últimas imagens obtidas pelos satélites da NASA, mostraram que a camada de gelo que cobre a região ártica diminuiu de forma considerável entre os invernos de 2005 e 2008 e foi substituída por gelo temporário muito mais fino. .
+    <p> <strong>Satélites da Nasa exibem redução da camada de gelo no Ártico </strong></p>
 
-Segundo o JPL, essa transformação foi causada pelo aumento das temperaturas atmosféricas no mundo todo e cujos resultados são evidentes também nas geleiras da Groenlândia e da Antártida.
+        
+<p>WASHINGTON.- As últimas imagens obtidas pelos satélites da NASA, mostraram que a camada de gelo que cobre a região ártica diminuiu de forma considerável entre os invernos de 2005 e 2008 e foi substituída por gelo temporário muito mais fino. Segundo o JPL, essa transformação foi causada pelo aumento das temperaturas atmosféricas no mundo todo e cujos resultados são evidentes também nas geleiras da Groenlândia e da Antártida.
 Son Nghiem, pesquisador da JPL afirmou que:
-    Esta é mais uma prova da rápidaágil transformação que está ocorrendo na camada de gelo que cobre o Ártico..</p>
+    Esta é mais uma prova da rápidaágil transformação que está ocorrendo na camada de gelo que cobre o Ártico.<p>
 
     <a href="../..//sumario.html">Voltar ao Sumário</a>
 
