--- a/capitulo1/fundamentos.html
+++ b/capitulo1/fundamentos.html
@@ -15,7 +15,7 @@
 Son Nghiem, pesquisador da JPL afirmou que:
     Esta é mais uma prova da rápidaágil transformação que está ocorrendo na camada de gelo que cobre o Ártico.<p>
 
-    <a href="../..//sumario.html">Voltar ao Sumário</a>
+    <a href="ExerciciosHTML">Voltar ao Sumário</a>
 
 </body>
 </html>
