--- a/capitulo2/introducao.html
+++ b/capitulo2/introducao.html
@@ -14,7 +14,7 @@ Si num tem leite então bota uma pinga aí cumpadi! Nulla id gravida magna, ut s
 
 Diuretics paradis num copo é motivis de denguis. Paisis, filhis, espiritis santis. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis. Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi..</p>
 
-    <a href="../sumario.html">Voltar ao Sumário</a>
+    <a href="ExerciciosHTML">Voltar ao Sumário</a>
 
 </body>
 </html>
