--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 
     <p>Esta é a página inicial do curso.</p>
 
-    <a href="sumario.html">Ir para o Sumário</a>
+    <a href="ExerciciosHTML">Voltar ao Sumário</a>
 
 </body>
 </html>
