--- a/capitulo1/introducao.html
+++ b/capitulo1/introducao.html
@@ -48,7 +48,7 @@ Fusce eu semper velit. Nullam placerat tincidunt risus, fermentum vestibulum dol
 
     
     <p>
-        <a  href="ExerciciosHTML">Voltar ao Sumário</a>
+        <a  href="/ExerciciosHTML">Voltar ao Sumário</a>
     </p>
 
 </body>
