--- a/capitulo1/exercicios/ex1.html
+++ b/capitulo1/exercicios/ex1.html
@@ -59,7 +59,7 @@
     <br><hr>
 
     <p>
-        <a href="../../sumario.html">⬅️ Voltar ao Sumário</a>
+        <a  href="/ExerciciosHTML">Voltar ao Sumário</a>
     </p>
 
 </body>
