--- a/capitulo1/exercicios/ex2.html
+++ b/capitulo1/exercicios/ex2.html
@@ -10,7 +10,7 @@
 
     <p>Descrição do exercício 2.</p>
 
-    <a href="../../sumario.html">Voltar ao Sumário</a>
+    <a  href="/ExerciciosHTML">Voltar ao Sumário</a>
 
 </body>
 </html>
