--- a/capitulo1/exercicios/ex3.html
+++ b/capitulo1/exercicios/ex3.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <title>Exercício 3</title>
+</head>
+<body>
 
+<a href="/exerciciosHTML">← Voltar ao Sumário</a>
+
+</body>
+</html>
