--- a/capitulo1/exercicios/ex4.html
+++ b/capitulo1/exercicios/ex4.html
@@ -31,9 +31,12 @@
             padding: 0 10px;
         }
 
-        label {
-            display: block;
-            margin: 10px 0 5px;
+        label.radio, 
+        label.checkbox {
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
+            margin: 5px 0;
         }
 
         input, textarea, select {
