--- a/capitulo1/exercicios/ex4.html
+++ b/capitulo1/exercicios/ex4.html
@@ -31,12 +31,9 @@
             padding: 0 10px;
         }
 
-        label.radio, 
-        label.checkbox {
-            display: inline-flex;
-            align-items: center;
-            gap: 6px;
-            margin: 5px 0;
+        label {
+            display: block;
+            margin: 10px 0 5px;
         }
 
         input, textarea, select {
