--- a/capitulo1/exercicios/ex4.html
+++ b/capitulo1/exercicios/ex4.html
@@ -125,6 +125,13 @@
             <option value="Smartwatch X">
         </datalist>
 
+        <label for="comprovante">Comprovante de Compra (Upload):</label>
+        <input type="file" 
+               id="comprovante" 
+               name="comprovante"
+               accept=".jpg, .jpeg, .png, .pdf"
+               required>
+
     </fieldset>
 
 
