--- a/capitulo1/exercicios/ex4.html
+++ b/capitulo1/exercicios/ex4.html
@@ -145,12 +145,12 @@
 
         <label>
             <input type="radio" name="envio" value="normal" checked>
-            Envio Normal
+            Envio Normal (4 - 8 dias)
         </label>
 
         <label>
             <input type="radio" name="envio" value="expresso">
-            Envio Expresso
+            Envio Expresso (1 - 3 dias)
         </label>
 
         <label for="comentarios">Comentários Adicionais:</label>
