--- a/capitulo1/exercicios/ex4.html
+++ b/capitulo1/exercicios/ex4.html
@@ -91,7 +91,7 @@
                name="telefone"
                pattern="\\([0-9]{2}\\) [0-9]{5}-[0-9]{4}"
                title="Formato esperado: (XX) XXXXX-XXXX"
-               placeholder="(11) 98765-4321"
+               placeholder="(11) 99999-9999"
                required>
 
         <label for="senha">Senha de Acesso:</label>
@@ -104,7 +104,10 @@
                required>
 
         <label for="site">Site (Opcional):</label>
-        <input type="url" id="site" name="site" placeholder="https://exemplo.com">
+        <input type="url" 
+               id="site" 
+               name="site" 
+               placeholder="https://exemplo.com">
     </fieldset>
 
 
