--- a/capitulo1/exercicios/ex4.html
+++ b/capitulo1/exercicios/ex4.html
@@ -147,7 +147,7 @@
             <option value="Smartwatch X">
         </datalist>
 
-        <label for="comprovante">Comprovante de Compra (Upload):</label>
+        <label for="comprovante">Comprovante de Compra (jpg, png ou pdf):</label>
         <input type="file" 
                id="comprovante" 
                name="comprovante"
