--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li><a href="#">Página Principal</a></li>
-                <li><a href="#">Sumário</a></li>
+                <li><a href="sumario.html">Sumário</a></li>
                 <li><a href="#">Contato</a></li>
                 <li><a href="#">Sobre</a></li>
             </ul>
